minor updates to term_enrichment

--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -313,6 +313,11 @@
             "main_tag": "term_enrichment",
             "secondary_tag": "ora"
         },
+        "download_gsea_hallmark_genes.py": {
+            "path": "term_enrichment/preprocessing/download_gsea_hallmark_genes.py",
+            "main_tag": "term_enrichment",
+            "secondary_tag": "preprocessing"
+        },
         "prep_annotations.py": {
             "path": "term_enrichment/preprocessing/prep_annotations.py",
             "main_tag": "term_enrichment",
