--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -43,6 +43,11 @@
             "main_tag": "atacseq",
             "secondary_tag": "peaks_visualization"
         },
+        "atacseq_peaks_visualizer_nopeaks.py": {
+            "path": "atacseq/peaks_visualization/atacseq_peaks_visualizer_nopeaks.py",
+            "main_tag": "atacseq",
+            "secondary_tag": "peaks_visualization"
+        },
         "ATACSeq_analysis": {
             "path": "git@github.com:mmarchetti90/ATACSeq_analysis.git",
             "main_tag": "atacseq",
