--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -98,6 +98,11 @@
             "main_tag": "machine_learning",
             "secondary_tag": "exploratory_analysis"
         },
+        "unbalanced_dataset_split.py": {
+            "path": "machine_learning/exploratory_analysis/unbalanced_dataset_split.py",
+            "main_tag": "machine_learning",
+            "secondary_tag": "exploratory_analysis"
+        },
         "metabolomics_analysis": {
             "path": "git@github.com:mmarchetti90/metabolomics_lipidomics.git",
             "main_tag": "metabolomics",
