--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -398,6 +398,11 @@
             "main_tag": "utils",
             "secondary_tag": "genomic_utils"
         },
+        "split_fasta.py": {
+            "path": "utils/genomic_utils/split_fasta.py",
+            "main_tag": "utils",
+            "secondary_tag": "genomic_utils"
+        },
         "two_level_nested_analysis.py": {
             "path": "utils/nested_analysis/two_level_nested_analysis.py",
             "main_tag": "utils",
