--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -403,6 +403,11 @@
             "main_tag": "utils",
             "secondary_tag": "genomic_utils"
         },
+        "make_analysis_report.py": {
+            "path": "utils/html_report_maker/make_analysis_report.py",
+            "main_tag": "utils",
+            "secondary_tag": "html_report_maker"
+        },
         "two_level_nested_analysis.py": {
             "path": "utils/nested_analysis/two_level_nested_analysis.py",
             "main_tag": "utils",
