--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -428,6 +428,11 @@
             "main_tag": "utils",
             "secondary_tag": "nested_analysis"
         },
+        "clinvar_annotation.py": {
+            "path": "variant_calling/clinvar/clinvar_annotation.py",
+            "main_tag": "variant_calling",
+            "secondary_tag": "clinvar"
+        },
         "nextflow_variant_calling": {
             "path": "git@github.com:mmarchetti90/nextflow_variant_calling.git",
             "main_tag": "variant_calling",
