--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -308,6 +308,11 @@
             "main_tag": "rnaseq",
             "secondary_tag": "single_cell"
         },
+        "gene_splicing_analysis.py": {
+            "path": "rnaseq/splicing/gene_splicing_analysis.py",
+            "main_tag": "rnaseq",
+            "secondary_tag": "splicing"
+        },
         "splice_check": {
             "path": "git@github.com:mmarchetti90/splice_check.git",
             "main_tag": "rnaseq",
