added ai tool to convert  phenotypes to hpo terms

--- a/code_base/code_manifest.json
+++ b/code_base/code_manifest.json
@@ -448,6 +448,11 @@
             "main_tag": "utils",
             "secondary_tag": "genomic_utils"
         },
+        "phenotype_to_hpo.py": {
+            "path": "utils/hpo/phenotype_to_hpo.py",
+            "main_tag": "utils",
+            "secondary_tag": "hpo"
+        },
         "make_analysis_report.py": {
             "path": "utils/html_report_maker/make_analysis_report.py",
             "main_tag": "utils",
